# virtual-literature-companion

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  test_system.py  test_virtual_literature_companion.py
api/: __init__.py  main.py
docs/: architecture.md
generation/image/: README.md
generation/music/: README.md
generation/voice/: README.md
page_classifier_sidequest/: build_page_dataset.py  final_classifier.py  page_classifier.py  page_ds_labeler.py
processors/: __init__.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  literary_companion_graph.py  pdf_agent.py  persona_agent.py
src/graph/: workflow.py
src/memory/: honcho_client.py
src/models/: __init__.py  schemas.py  state.py
src/processors/: pdf_extractor.py
src/services/: __init__.py  citation_extractor.py  gesture_parser.py
src/tools/: __init__.py  book_processor.py
src/ui/: animation_engine.py
src/utils/: __init__.py
src/voice/: tts_engine.py
static/: index.html
static/audio/: README.md
static/css/: gestures.css  main.css
static/js/: gestures.js  main.js
tests/: __init__.py  test_book_processor.py  test_emotional_state.py
tests/unit/: test_models.py
virtual-literature-companion/docs/: project-structure.md  requirements.md
virtual_literature_companion/: __init__.py  __main__.py  ai.py  cli.py  constants.py  ingest.py  novel_artifacts_manager.py
virtual_literature_companion/indexes/: create_vector_indexes.py
virtual_literature_companion/processors/: __init__.py  create_vector_indexes.py  parse_novel_text.py  pdf2txt.py  process_novel_text.py
wild-genius-prof/: __init__.py  config.py  emotional_intelligence.py  graph.py  persona.py  state.py  tools.py
wild-genius-prof/prompts/: citation.txt  emotional_tags.txt  socratic.txt  system.txt
wild_genius_prof/: __init__.py  config.py  graph.py  persona.py  state.py  tools.py
